# node-yara-x

./: .editorconfig  .gitignore  Cargo.toml  README.md  SECURITY.md  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CI.yml  create-release.yml  dependency-review.yml  prepare-release.yml  publish.yml  scorecard.yml  verify-signatures.yml
__test__/: baseline-performance.json  benchmark.mjs  index.spec.mjs  performance-regression.mjs  profiling.mjs  run-profiling.mjs
docs/: release-process.md
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: LICENSE-BSD-3-Clause  LICENSE-MIT  README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: patch-index.js  prepare-release.mjs
src/: compiler.rs  error.rs  lib.rs  scanner.rs  tasks.rs  types.rs  variables.rs
