[package]
edition = "2021"
name = "node-yara-x"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Enable napi4 and async features
napi = { version = "3.9.0", default-features = false, features = ["napi4", "async"] }
napi-derive = "3.5.6"
yara-x = "1.16.0"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
